--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
-    background: ivory;
+    /* background: rgb(184, 184, 5); */
 }
 
 canvas{
