--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 html,
 body,
 #root
@@ -7,8 +8,10 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: rgb(184, 184, 5); */
+    background: #000;
 }
+
+
 
 canvas{
     touch-action: none;
