--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@
     font-family: f1;
     src: url('/Generation-Mono.otf');
 }
+
 @font-face {
     font-family: f2;
     src: url('/BasementGrotesque-Black_v1.202.otf');
 }
-a{
+
+a {
     color: #c77dff;
     text-decoration: none;
 }
@@ -27,7 +29,8 @@ a{
     align-items: center;
     transform: translateY(-50px);
 }
-.text-box{
+
+.text-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,16 +52,16 @@ a{
     transform: translateY(-90px);
 }
 
-.icon-container{
+.icon-container {
     background-color: transparent;
     position: absolute;
     inset: auto 10px 10px auto;
     padding: 10px 2px;
     border: 1px solid #e0c3fc;
-    border-radius: 10vmax ;
+    border-radius: 10vmax;
 }
 
-.icon-box{
+.icon-box {
     display: flex;
     flex-direction: column;
 }
@@ -68,16 +71,150 @@ a{
     margin: 10px;
 }
 
-.credit-container{
+.credit-container {
     position: absolute;
-    inset: 280px -150px auto auto;
+    inset: 31svh -150px auto auto;
     display: inline;
     transform: rotate(90deg);
-
 }
-.credit-box{
+
+.credit-box {
     font-family: f2;
     color: #240046;
     font-size: .9rem;
 }
 
+@media screen and (min-width: 1300px) {
+    .text-container {
+        transform: translateY(0);
+    }
+
+    .text-container h1 {
+        font-size: 6rem;
+    }
+
+    .text-container h3 {
+        font-size: 1.3rem;
+        transform: translateX(5px) translateY(-105px);
+    }
+
+    .icon-container {
+        inset: auto 15px 15px auto;
+        padding: 10px 2px;
+    }
+
+    .icon-box img {
+        width: 20px;
+        margin: 15px;
+    }
+
+    .credit-container {
+        inset: 400px -175px auto auto;
+    }
+
+    .credit-box {
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (min-width: 1100px) and (max-width: 1299px) {
+    .text-container {
+        transform: translateY(-30px);
+    }
+
+    .text-container h3 {
+        transform: translateX(5px) translateY(-90px);
+    }
+
+    .icon-container {
+        inset: auto 15px 15px auto;
+        padding: 10px 2px;
+    }
+
+    .icon-box img {
+        width: 20px;
+        margin: 15px;
+    }
+
+    .credit-container {
+        inset: 35svh -10.5svw auto auto;
+    }
+
+}
+
+@media screen and (min-width: 700px) and (max-width: 1100px) {
+    .text-container {
+        transform: translateY(0);
+    }
+
+    .text-container h1 {
+        font-size: 3.2rem;
+    }
+
+    .text-container h3 {
+        font-size: .8rem;
+        transform: translateY(0);
+    }
+
+}
+
+@media screen and (min-width: 400px) and (max-width: 600px) {
+    .text-container {
+        transform: translateY(-10px);
+    }
+
+    .text-container h1 {
+        font-size: 1.8rem;
+    }
+
+    .text-container h3 {
+        transform: translateY(-30px);
+        font-size: .6rem;
+    }
+
+    .credit-container {
+        inset: auto -16svw 30svh auto;
+    }
+
+    .credit-box {
+        font-size: .5rem;
+    }
+
+}
+
+@media screen and (min-width: 400px) and (max-width: 600px) and (min-height: 700px) and (max-height: 800px) {
+    .credit-container {
+        inset: auto -16svw 35svh auto;
+    }
+}
+
+@media screen and (min-width: 300px) and (max-width: 400px) {
+    .text-container {
+        transform: translateY(0px);
+        padding: 0 10px;
+    }
+
+    .text-container h1 {
+        font-size: 1.5rem;
+    }
+
+    .text-container h3 {
+        transform: translateY(-30px);
+        font-size: .8rem;
+    }
+
+    .credit-container {
+        inset: auto -30svw 40svh auto;
+    }
+
+    .credit-box {
+        font-size: .7rem;
+    }
+
+}
+
+@media screen and (min-width: 300px) and (max-width: 400px) and (min-height: 600px) and (max-height: 700px) {
+    .credit-container {
+        inset: auto -30svw 50svh auto;
+    }
+}
